# eromedownloader

./: .gitignore  EromeDownloader.spec  build_release.py  pyproject.toml
installer/: instalar.bat
release/EromeDownloader/: desinstalar.bat
src/: main.py
src/core/: downloader.py  face_detect.py  media.py  models.py  scraper.py  updater.py
src/gui/: app.py  download_frame.py  settings_frame.py
src/utils/: config.py
