[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erome-downloader"
version = "1.0.0"
description = "Baixador de mídias do Erome"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0",
    "beautifulsoup4>=4.12.0",
    "Pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "Brotli>=1.1.0",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
